# oramemvid

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
docs/superpowers/plans/: 2026-04-05-oramemvid.md
docs/superpowers/specs/: 2026-04-05-oramemvid-design.md
src/oramemvid/: __init__.py  api.py  config.py  db.py  embeddings.py  frames.py  ingest.py  llm.py  memory_cards.py  search.py
tests/: conftest.py  test_api.py  test_config.py  test_db.py  test_embeddings.py  test_frames.py  test_ingest.py  test_integration.py  test_llm.py  test_memory_cards.py  test_search.py
tests/fixtures/: sample.txt
