[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oramemvid"
version = "0.1.0"
description = "AI memory layer backed by Oracle Database, inspired by memvid"
requires-python = ">=3.12"
dependencies = [
    "oracledb>=2.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "python-pptx>=0.6",
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
